--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -193,40 +193,51 @@
                 <div class="card-header  ">
                 <h5>TRADE AREA EXPERIENCE (indicate number of contracts)</h5>
               </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="europe">
-                                <label class="form-check-label" for="europe">Europe</label>
-                            </div>
+              <div class="col">
+                <div class="border border-black-1">
+                  <div class="bg-light p-4">
+                    <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
+                    <div class="row row-cols-2 g-2">
+                      <div class="col">
+                        <div class="form-check">
+                          <input type="radio" class="form-check-input" name="containerExperience" id="ceInput1">
+                          <label class="form-check-label" for="ceInput1">&lt; 1000</label>
                         </div>
-                        <div class="col">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="usa">
-                                <label class="form-check-label" for="usa">USA</label>
-                            </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-check">
+                          <input type="radio" class="form-check-input" name="containerExperience" id="ceInput2">
+                          <label class="form-check-label" for="ceInput2">1000 - 3000</label>
                         </div>
-                        <div class="col">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="medSea">
-                                <label class="form-check-label" for="medSea">Med.-Sea</label>
-                            </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-check">
+                          <input type="radio" class="form-check-input" name="containerExperience" id="ceInput3">
+                          <label class="form-check-label" for="ceInput3">3000 - 6000</label>
                         </div>
-                        <div class="col">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="farEast">
-                                <label class="form-check-label" for="farEast">Far East</label>
-                            </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-check">
+                          <input type="radio" class="form-check-input" name="containerExperience" id="ceInput4">
+                          <label class="form-check-label" for="ceInput4">6000 - 10000</label>
                         </div>
-                        <div class="col">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="pgGoa">
-                                <label class="form-check-label" for="pgGoa">PG/GOA</label>
-                            </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-check">
+                          <input type="radio" class="form-check-input" name="containerExperience" id="ceInput5">
+                          <label class="form-check-label" for="ceInput5">10000 - 15000</label>
                         </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-check">
+                          <input type="radio" class="form-check-input" name="containerExperience" id="ceInput6">
+                          <label class="form-check-label" for="ceInput6">&gt;15000</label>
+                        </div>
+                      </div>
                     </div>
+                  </div>
                 </div>
+              </div>
             </div>
         </form>
     
