--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -251,6 +251,40 @@
         <div class="card mb-3 ">
             <div class="card-header  ">
             <h5>TRADE AREA EXPERIENCE (indicate number of contracts)</h5>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="europe">
+                            <label class="form-check-label" for="europe">Europe</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="usa">
+                            <label class="form-check-label" for="usa">USA</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="medSea">
+                            <label class="form-check-label" for="medSea">Med.-Sea</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="farEast">
+                            <label class="form-check-label" for="farEast">Far East</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="pgGoa">
+                            <label class="form-check-label" for="pgGoa">PG/GOA</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
           </div>
           <div class="col">
             <div class="border border-black-1">
