--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -936,7 +936,7 @@ SIRE/CDI experience Right ship
           const ids = [
               'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile',
               'qualification', 'lastContract', 'englishGood', 'englishSatisf',
-              'englishPoor', 'Bmi', 'Europe', 'usa', 'medSea', 'farEast', 'pgGoa',
+              'englishPoor', 'bmi', 'europe', 'usa', 'medSea', 'farEast', 'pgGoa',
               'crewExperienceYes', 'crewExperienceNo', 'newNationality',
               'cargosHandled', 'automationExperience', 'ceInput1', 'ceInput2',
               'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'sulzer', 'sulzer_rta',
@@ -953,7 +953,7 @@ SIRE/CDI experience Right ship
               'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes',
               'safetyISMNo', 'auditsYes', 'auditsNo', 'ecaSecaOperationYes',
               'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo',
-              'fuelChangeoverYes', 'fuelChangeoverNo', 'opeartionProceduresYes',
+              'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes',
               'operationProceduresNo', 'regulationsYes', 'regulationsNo',
               'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
               'intName', 'dateNow', 'signNow'
