--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -447,10 +447,12 @@
           <h5 class="form-label">TYPES OF CARGO GEARS PREVIOUSLY WORKED WITH:</h5>
           <div class="">
             <div class="form-check me-3 ">
-              <input class="" readonly type="text" id="pumps" placeholder="Pumps">
+              <label for="pumps">Pumps</label>
+              <input class="" readonly type="checkbox" id="pumps" placeholder="Pumps">
             </div>
             <div class="form-check">
-              <input class="" readonly type="text" id="gears" placeholder="Gears">
+              <label for="gears">Gears</label>
+              <input class="" readonly type="checkbox" id="gears" placeholder="Gears">
             </div>
           </div>
         </div>
