--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -1014,7 +1014,7 @@ SIRE/CID experience
                       'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes',
                       'safetyISMNo', 'auditsYes', 'auditsNo', 'ecaSecaOperationYes',
                       'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo',
-                      'fuelChangeoverYes', 'fuelChangeoverNo', 'opeartionProceduresYes',
+                      'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes',
                       'operationProceduresNo', 'regulationsYes', 'regulationsNo',
                       'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
                       'intName', 'dateNow', 'signNow'
