--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -997,7 +997,7 @@ SIRE/CID experience
                   const ids = [
                       'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile',
                       'qualification', 'lastContract', 'englishGood', 'englishSatisf',
-                      'englishPoor', 'Bmi', 'Europe', 'usa', 'medSea', 'farEast', 'pgGoa',
+                      'englishPoor', 'bmi', 'europe', 'usa', 'medSea', 'farEast', 'pgGoa',
                       'crewExperienceYes', 'crewExperienceNo', 'newNationality',
                       'cargosHandled', 'automationExperience', 'ceInput1', 'ceInput2',
                       'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'sulzer', 'sulzer_rta',
