--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -216,6 +216,7 @@
                         </div>
                         <div class="col">
                           <div class="">
+                            <label for="othersTAE">Others</label>
                               <input class="" readonly type="text" id="othersTAE" placeholder="others">
                               
                           </div>
@@ -389,7 +390,7 @@
               </div>
             </div><div class="col">
               <div class="  ">
-                <label for="mak" class="form-label fs-6">Others</label>
+                <label for="otherME" class="form-label fs-6">Others</label>
 
                 <input type="text" id="otherME" readonly class="form-control"  >
               </div>
@@ -936,7 +937,7 @@ SIRE/CDI experience Right ship
       // Function to populate form fields with values from the evaluation data
       function populateFormFields(data) {
           const ids = [
-              'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile',
+              'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile','othersTAE','othersME',
               'qualification', 'lastContract', 'englishGood', 'englishSatisf',
               'englishPoor', 'bmi', 'europe', 'usa', 'medSea', 'farEast', 'pgGoa',
               'crewExperienceYes', 'crewExperienceNo', 'newNationality',
