--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -224,7 +224,7 @@
                         <div class="col">
                           <div class="">
                             <label for="othersTAE">Others</label>
-                              <input class="" readonly type="text" id="othersTAE" placeholder="others">
+                              <input class=""  type="text" id="othersTAE" placeholder="others">
                               
                           </div>
                       </div>
