--- a/views/public/html/Evaluation-EngineRatingsForm.html
+++ b/views/public/html/Evaluation-EngineRatingsForm.html
@@ -585,7 +585,7 @@ SIRE/CDI experience Right ship
           <h4 class="text-danger mb-3">INTERVIEWER COMMENTS</h4>
 
           <div class="mb-3">
-            <textarea class="form-control" rows="4"></textarea>
+            <textarea class="form-control" rows="4" id="intComments"></textarea>
           </div>
 
           <div class="row mb-3">
@@ -694,7 +694,7 @@ SIRE/CDI experience Right ship
               'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo',
               'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes',
               'operationProceduresNo', 'regulationsYes', 'regulationsNo','leaving',
-              'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
+              'leavingLast', 'intComments', 'accepted', 'rejected', 'grading',
               'intName', 'dateNow', 'signNow'
         ];
     
