--- a/views/public/html/Evaluation-EngineRatings.html
+++ b/views/public/html/Evaluation-EngineRatings.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -19,6 +20,7 @@
             </form>
         </div>
     </div>
+  
     <div class="container mt-4 p-5 bg-light w-75 border border-black-1 ">
         <div class="row mb-3">
             <div class="col-md-2 border d-flex justify-content-center align-items-center">
@@ -595,7 +597,7 @@ SIRE/CDI experience Right ship
           <h4 class="text-danger mb-3">INTERVIEWER COMMENTS</h4>
 
           <div class="mb-3">
-            <textarea class="form-control" rows="4"></textarea>
+            <textarea class="form-control" rows="4" id="intComments"></textarea>
           </div>
 
           <div class="row mb-3">
@@ -778,7 +780,7 @@ SIRE/CDI experience Right ship
               'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo',
               'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes',
               'operationProceduresNo', 'regulationsYes', 'regulationsNo','leaving',
-              'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
+              'leavingLast', 'intComments', 'accepted', 'rejected', 'grading',
               'intName', 'dateNow', 'signNow' ];
     
                     const evalObject = {};
