--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -856,7 +856,7 @@ SIRE/CID experience
             <div class="col-md-4">
               <div class="form-group">
                 <label for="grading">GRADING:</label>
-                <select class="form-control" id="grading" readonly>
+                <select class="form-control" id="grading" >
                   <option value=""></option>
                   <option value="1">1</option>
                   <option value="2">2</option>
