--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -735,7 +735,7 @@
         
                                 <div class="col-md-6">
                                   <div class="form-floating">
-                                      <select id="candidate_c_vessel" class="form-select" >
+                                      <select id="candidate_c_vessel" class="form-select" required>
                                           <option value="" disabled selected>-- Select Vessel Type --</option>
                                           <!-- Options will be dynamically added using JavaScript -->
                                       </select>
