vendor and owner dashboard 4

--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -198,10 +198,10 @@
                 </div>
               </form>
               <a href="vendorlogin.html" >
-                <div class="text-center opacity-50  mt-4"   > Redirect - Vendor Login</div>
+                <div class="text-center opacity-50 mb-2 mt-4"   > Redirect - Vendor Login</div>
               </a>
               <a href="ownerlogin.html" >
-                <div class="text-center opacity-50 mb-2 mt-4"   > Redirect - Owner Login</div>
+                <div class="text-center opacity-50 mb-2"   > Redirect - Owner Login</div>
               </a>
                
                 <a href="candidate-login.html">
