--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -1279,6 +1279,19 @@
                                     <label for="edit_candidate_email2">Secondary Email</label>
                                 </div>
                             </div>
+
+                            <div class="col-md-6 mb-0">
+                              <div class="form-floating">
+                                  <select
+                                      class="form-control"
+                                      id="edit_candidate_userId"
+                                      aria-describedby="fieldX_2_Help"
+                                  >
+                                      <!-- Options will be dynamically populated here -->
+                                  </select>
+                                  <label for="edit_candidate_userId">Assign to User</label>
+                              </div>
+                          </div>
                             
                         </div>
                         <div class="card-footer text-end pe-0">
