UI reports dev 1

--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -200,6 +200,9 @@
               <a href="vendorlogin.html" >
                 <div class="text-center opacity-50 mb-2 mt-4"   > Redirect - Vendor Login</div>
               </a>
+              <a href="agentlogin.html" >
+                <div class="text-center opacity-50 mb-2"   > Redirect - Agent Login</div>
+              </a>
               <a href="ownerlogin.html" >
                 <div class="text-center opacity-50 mb-2"   > Redirect - Owner Login</div>
               </a>
