--- a/views/public/html/agentlogin.html
+++ b/views/public/html/agentlogin.html
@@ -151,7 +151,7 @@
               </div>
               <!-- /Logo -->
               <h4 class="mb-4 text-center mt-0 me-4 pt-3 text-primary" style="font-size: 14px;  
-              ">OWNER LOGIN</h4>
+              ">AGENT LOGIN</h4>
                     
               <form id="login-form" class="mb-3" >
                 <div class="mb-3 ">
@@ -233,7 +233,7 @@
 
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src ="./ownerlogin.js"></script>
+    <script src ="./agentlogin.js"></script>
     <!-- Page JS -->
     <script src="../js/script.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
