UI reports dev 2

--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -880,7 +880,7 @@
                     <span><a href="./contract-due.html">Contract Dues</a></span>
 
                     <span><a href="./reminder.html">Reminders</a></span>
-                    <span><a href="./availableCandidates.html">Available Candidates</a></span>
+                    <!-- <span><a href="./availableCandidates.html">Available Candidates</a></span> -->
                     <span><a href="./reportsAll.html">Export All</a></span>
                     <span><a href="./queries.html">Queries</a></span>
                     <span><a href="./status.html"> Status</a></span>
