--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -562,22 +562,10 @@
               </div>
           </nav>
           <div class=" container-fluid mt-3">
-            <div class="d-flex justify-content-center">
-            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-              <label class="btn btn-dark ">
-                <input type="radio" name="options" id="dailyButton" autocomplete="off" checked> Daily
-              </label>
-              <label class="btn btn-dark">
-                <input type="radio" name="options" id="weeklyButton" autocomplete="off"> Weekly
-              </label>
-              <label class="btn btn-dark">
-                <input type="radio" name="options" id="monthlyButton" autocomplete="off"> Monthly
-              </label>
-            </div>
-            </div>
+           
             <div class=" rounded-3 card p-3 mt-2  " style="background-color: rgb(58, 186, 150);">
               <div class="d-flex justify-content-between">
-              <h4 class="text-white  p-3 mb-0 ">Nemo Dashboard <div id="datetime" style="font-size: 14px;" class="text-white p-3 ps-0 pb-0"></div></h4>
+              <!-- <h4 class="text-white  p-3 mb-0 ">Nemo Dashboard <div id="datetime" style="font-size: 14px;" class="text-white p-3 ps-0 pb-0"></div></h4> -->
               <span>
 
     </div>
