UI reports dev 7

--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -565,7 +565,7 @@
            
             <div class=" rounded-3 card p-3 mt-2  " style="background-color: rgb(58, 186, 150);">
               <div class="d-flex justify-content-between">
-              <!-- <h4 class="text-white  p-3 mb-0 ">Nemo Dashboard <div id="datetime" style="font-size: 14px;" class="text-white p-3 ps-0 pb-0"></div></h4> -->
+              <h4 class="text-white  p-3 mb-0 "> <div id="datetime" style="font-size: 14px;" class="text-white p-3 ps-0 pb-0"></div></h4>
               <span>
 
     </div>
