UI reports dev 10

--- a/views/public/html/reminder-document.html
+++ b/views/public/html/reminder-document.html
@@ -569,7 +569,7 @@
           <!-- Content wrapper -->
           
           <div class="container-fluid">
-            <a href='./indexpage.html' class="btn btn-primary  mt-3" >  Back to Dashboard</a>
+            <!-- <a href='./indexpage.html' class="btn btn-primary  mt-3" >  Back to Dashboard</a> -->
 
             <div class="p-3 card mt-3">
                 <h4>Documents with Approaching Expiry Dates</h4>
