UI reports dev 11

--- a/views/public/html/contract-due.html
+++ b/views/public/html/contract-due.html
@@ -565,7 +565,7 @@
 
           <!-- Content wrapper -->
           <div class="container-fluid">
-            <a href="./indexpage.html" class="btn btn-primary mt-3 mb-3">Back to Dashboard</a>
+            <!-- <a href="./indexpage.html" class="btn btn-primary mt-3 mb-3">Back to Dashboard</a> -->
             <div class="card p-3">
                 <div class="row mt-3">
                     <div class="col">
