UI reports dev 14

--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -562,8 +562,8 @@
 
           <!-- Content wrapper -->
           <div class="container-fluid">
-            <a href="./indexpage.html" class=" btn btn-primary mt-3 mb-3">Back to Dashboard</a>
-            <div class="card p-3">
+            <!-- <a href="./indexpage.html" class=" btn btn-primary mt-3 mb-3">Back to Dashboard</a> -->
+            <div class="card p-3 mt-3">
             <div class="row mt-3">
 
                 <div class="col">
