UI reports dev 15

--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -546,7 +546,7 @@
             </div>
           </nav>
   <div class="p-4 pt-3 ">
-    <a class=" btn btn-primary mb-3" href="./indexpage.html">Back to Dashboard</a>
+    <!-- <a class=" btn btn-primary mb-3" href="./indexpage.html">Back to Dashboard</a> -->
 
     <div class="card p-3 mb-3">
       <h4 class="text-primary pt-2">All Queries</h4>
