UI reports dev 16

--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -567,9 +567,9 @@
           
           <!-- Content wrapper -->
           <div class="container-fluid" >
-            <a href="./indexpage.html" class="btn btn-primary mt-3 mb-3"> Back to Dashboard</a>
+            <!-- <a href="./indexpage.html" class="btn btn-primary mt-3 mb-3"> Back to Dashboard</a> -->
 
-            <div class="container-fluid card">
+            <div class="container-fluid card mt-3">
                 <h4 class="ms-0 mt-3">Todays All Discussions</h4>
 
                 <ul id="discussionList" class="list-group mt-3 border border-secondary-subtle mb-3"></ul>
