UI reports dev 17

--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -595,13 +595,13 @@
                 </style>
                 <div id="tableContainer">
                     <button id="exportBtn" class="btn float-end m-2 text-dark border">Export to Excel</button>
-                    <table id="candidatesTable" class="table table table-bordered">
+                    <table id="candidatesTable" class="table table-sm table-bordered">
                         <thead class="text-center">
                             <tr>
                               <th class="border-0 bg-dark text-white">S.No</th>
                                 <th class="border-0 bg-dark text-white">Nemo&nbsp;Id</th>
-                                <th class="border-0 bg-dark text-white">First Name</th>
-                                <th class="border-0 bg-dark text-white">Last Name</th>
+                                <th class="border-0 bg-dark text-white">First&nbsp;Name</th>
+                                <th class="border-0 bg-dark text-white">Last &nbsp;Name</th>
                                 <th class="border-0 bg-dark text-white">Rank</th>
                                 <th class="border-0 bg-dark text-white">Mobile</th>
                                 <th class="border-0 bg-dark text-white">Email</th>
