--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -566,8 +566,8 @@
 
           <!-- Content wrapper -->
           <div class="container-fluid">
-            <a href="./indexpage.html" class="btn btn-primary mt-3 mb-3">Back To Dashboard</a>
-            <div class="container-fluid p-5 card">
+            <!-- <a href="./indexpage.html" class="btn btn-primary mt-3 mb-3">Back To Dashboard</a> -->
+            <div class="container-fluid p-5 card mt-3">
                 <h3 class="text-primary pb-0 mb-2">Birthday Reminder</h3>
                 <p style="font-size: 12px;" class="mt-0 pt-0">- Upcoming birthdays for a week are displayed below</p>
                 <div class="col">
