UI reports dev 20

--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -605,7 +605,7 @@
                                 <th class="border-0 bg-dark text-white">Rank</th>
                                 <th class="border-0 bg-dark text-white">Mobile</th>
                                 <th class="border-0 bg-dark text-white">Email</th>
-                                <th class="border-0 bg-dark text-white">Date&nbsp;of&nbsp;Birth</th>
+                                <th class="border-0 bg-dark text-white">DOB</th>
                                 <th class="border-0 bg-dark text-white">Birthday</th>
                             </tr>
                         </thead>
