UI reports dev 22

--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -581,7 +581,7 @@
                 <div id="error" class="text-center text-danger" style="display: none;">Error: Failed to fetch data.</div>
                 <style>
                     #tableContainer {
-                        width: 1050px;
+                        /* width: 1050px; */
                         overflow-x: auto;
                     }
                     #candidatesTable {
